# algorithms

cxx/: CMakeLists.txt  flake.nix
cxx/src/: main.cpp
rust/: Cargo.toml  flake.nix
rust/src/: heap.rs  main.rs
sorting/rust/src/: heap.rs  main.rs
