cmake_minimum_required(VERSION 3.10)
project(Algorithms CXX)

add_executable(MyAlgorithms src/main.cpp)

# # Add your main source files
# add_library(MyModule STATIC src/my_module/my_class.cpp)
# target_include_directories(MyModule PUBLIC include)

# Add unit tests
# enable_testing()
# add_executable(MyModuleTests test/my_module/my_class_test.cpp)
# target_link_libraries(MyModuleTests MyModule GTest::gtest_main) # Assuming Google Test
# add_test(NAME MyModuleUnitTests COMMAND MyModuleTests)
